Various bug fixes and adjustments